final version, i guess

--- a/appendix/hist_combined.tex
+++ b/appendix/hist_combined.tex
@@ -1,10 +1,10 @@
 \section{PIP-PGD Input Similarities}
 \label{appendix:combined}
 
+\FloatBarrier
 \subsection*{Global Features}
 
-
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_jet_eta.pdf}
@@ -23,7 +23,7 @@
   \label{fig:combined_input_jet_eta}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_jet_pt.pdf}
@@ -42,7 +42,7 @@
   \label{fig:combined_input_jet_pt}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_n_Cpfcand.pdf}
@@ -61,7 +61,7 @@
   \label{fig:combined_input_n_Cpfcand}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_n_Npfcand.pdf}
@@ -80,7 +80,7 @@
   \label{fig:combined_input_n_Npfcand}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_npv.pdf}
@@ -99,7 +99,7 @@
   \label{fig:combined_input_npv}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_nsv.pdf}
@@ -118,7 +118,7 @@
   \label{fig:combined_input_nsv}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_jetNSelectedTracks.pdf}
@@ -137,7 +137,7 @@
   \label{fig:combined_input_TagVarCSV_jetNSelectedTracks}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_jetNTracksEtaRel.pdf}
@@ -156,7 +156,7 @@
   \label{fig:combined_input_TagVarCSV_jetNTracksEtaRel}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSip2dSigAboveCharm.pdf}
@@ -175,7 +175,7 @@
   \label{fig:combined_input_TagVarCSV_trackSip2dSigAboveCharm}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSumJetDeltaR.pdf}
@@ -194,7 +194,7 @@
   \label{fig:combined_input_TagVarCSV_trackSumJetDeltaR}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSip2dValAboveCharm.pdf}
@@ -213,7 +213,7 @@
   \label{fig:combined_input_TagVarCSV_trackSip2dValAboveCharm}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSip3dSigAboveCharm.pdf}
@@ -232,7 +232,7 @@
   \label{fig:combined_input_TagVarCSV_trackSip3dSigAboveCharm}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSip3dValAboveCharm.pdf}
@@ -251,7 +251,7 @@
   \label{fig:combined_input_TagVarCSV_trackSip3dValAboveCharm}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSumJetDeltaR.pdf}
@@ -270,7 +270,7 @@
   \label{fig:combined_input_TagVarCSV_trackSumJetDeltaR}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_trackSumJetEtRatio.pdf}
@@ -289,7 +289,7 @@
   \label{fig:combined_input_TagVarCSV_trackSumJetEtRatio}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_global_features_TagVarCSV_vertexCategory.pdf}
@@ -308,11 +308,12 @@
   \label{fig:combined_input_TagVarCSV_vertexCategory}
 \end{figure}
 
+\FloatBarrier
 \newpage
 \subsection*{CPF Features}
 
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_chi2.pdf}
@@ -331,7 +332,7 @@
   \label{fig:combined_input_Cpfcan_chi2}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_chi2.pdf}
@@ -350,7 +351,7 @@
   \label{fig:combined_input_Cpfcan_chi2}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_drminsv.pdf}
@@ -369,7 +370,7 @@
   \label{fig:combined_input_Cpfcan_drminsv}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_ptrel.pdf}
@@ -388,7 +389,7 @@
   \label{fig:combined_input_Cpfcan_ptrel}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_puppiw.pdf}
@@ -407,7 +408,7 @@
   \label{fig:combined_input_Cpfcan_puppiw}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_quality.pdf}
@@ -426,7 +427,7 @@
   \label{fig:combined_input_Cpfcan_quality}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_VTX_ass.pdf}
@@ -445,7 +446,7 @@
   \label{fig:combined_input_Cpfcan_VTX_ass}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackDeltaR.pdf}
@@ -464,7 +465,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackDeltaR}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackEtaRel.pdf}
@@ -483,7 +484,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackEtaRel}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackJetDistVal.pdf}
@@ -502,7 +503,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackJetDistVal}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackPPar.pdf}
@@ -521,7 +522,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackPPar}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackPParRatio.pdf}
@@ -540,7 +541,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackPParRatio}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackPtRel.pdf}
@@ -559,7 +560,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackPtRel}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackSip2dSig.pdf}
@@ -578,7 +579,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip2dSig}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackSip2dVal.pdf}
@@ -597,7 +598,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip2dVal}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackSip3dSig.pdf}
@@ -616,7 +617,7 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip3dSig}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_cpf_arr_Cpfcan_BtagPf_trackSip3dVal.pdf}
@@ -635,11 +636,12 @@
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip3dVal}
 \end{figure}
 
+\FloatBarrier
 \newpage
 \subsection*{NPF Features}
 
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_deltaR.pdf}
@@ -658,7 +660,7 @@
   \label{fig:combined_input_Npfcan_deltaR}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_drminsv.pdf}
@@ -677,7 +679,7 @@
   \label{fig:combined_input_Npfcan_drminsv}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_HadFrac.pdf}
@@ -696,7 +698,7 @@
   \label{fig:combined_input_Npfcan_HadFrac}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_isGamma.pdf}
@@ -715,7 +717,7 @@
   \label{fig:combined_input_Npfcan_isGamma}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_ptrel.pdf}
@@ -734,7 +736,7 @@
   \label{fig:combined_input_Npfcan_ptrel}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_npf_arr_Npfcan_puppiw.pdf}
@@ -753,11 +755,11 @@
   \label{fig:combined_input_Npfcan_puppiw}
 \end{figure}
 
-
+\FloatBarrier
 \newpage
 \subsection*{SV Features}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_chi2.pdf}
@@ -776,7 +778,7 @@
   \label{fig:combined_input_sv_chi2}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_costhetasvpv.pdf}
@@ -795,7 +797,7 @@
   \label{fig:combined_input_sv_costhetasvpv}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_d3d.pdf}
@@ -814,7 +816,7 @@
   \label{fig:combined_input_sv_d3d}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_d3dsig.pdf}
@@ -833,7 +835,7 @@
   \label{fig:combined_input_sv_d3dsig}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_deltaR.pdf}
@@ -852,7 +854,7 @@
   \label{fig:combined_input_sv_deltaR}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_dxy.pdf}
@@ -871,7 +873,7 @@
   \label{fig:combined_input_sv_dxy}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_dxysig.pdf}
@@ -890,7 +892,7 @@
   \label{fig:combined_input_sv_dxysig}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_enratio.pdf}
@@ -909,7 +911,7 @@
   \label{fig:combined_input_sv_enratio}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_mass.pdf}
@@ -928,7 +930,7 @@
   \label{fig:combined_input_sv_mass}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_normchi2.pdf}
@@ -947,7 +949,7 @@
   \label{fig:combined_input_sv_normchi2}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_ntracks.pdf}
@@ -966,7 +968,7 @@
   \label{fig:combined_input_sv_ntracks}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[h]
   \centering
   \begin{subfigure}[t]{0.32\textwidth}
     \includegraphics[width=\linewidth]{media/output/features/compare/combined_it_1/cmp_vtx_arr_sv_pt.pdf}
